# btc_price_prediction

./: BTC_price_prediction.ipynb  BTC_price_prediction_notebook  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt
bot/: BTC_xgb.pkl  main.py  pyproject.toml  requirements.txt
model/: BTC_price_prediction.ipynb  requirements.txt
