[project]
name = "BTC prive prediction"
version = "0.1.0"
description = ""
authors = ["Leo Fisher"]
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "python-dotenv>=1.0.1",
    "ta>=0.11.0",
    "telegram>=0.0.1",
    "xgboost>=2.1.3",
    "yfinance>=0.2.52",
]
